tests/pass/15_prototypes.lang
функция тест() : пусто;

функция Начало() : целое {
    тест();
    вернуть 0;
}

функция тест() : пусто {
    печать("вызов прототипа");
}
