tests/fail/19_char_multichar.lang
// ОЖИДАЕТСЯ ОШИБКА: ожидалось выражение
функция Начало(): целое {
  символ multi = 'ab';
  вернуть 0;
}
